Release 0.9.5
* Added \eval command to read and process the contents of a file.
* Added tab completion of procedure names.
* Improved tab completion of object names to better understand
  object owners and schemas.
* Added default aliases "vi" and "emacs" or \buf-edit
* Fixed OutOfMemoryError when nested SQL exceptions are returned by the server.
* Fixed NullPointerException when running non-interactive scripts
  of SQL via the -i flag.

Release 0.9.4

* Added tab completion of object names. The logic is pretty smart too, and
  understands "quoted object names" and [bracketed object names].
* Added '-m style' flag to the \go command.
* Added new display style 'csv'.
* Added new ${classpath} configuration variable to allow the user to
  specify additional jar locations for JDBC drivers.
* Added support for empty passwords
* Added new \macro command for defining velocimacros
* Fixed documentation for the \connect command
* Fixed "-D" flag for the \connect command
* Fixed handling of NULL values for binary data types.

Release 0.9.3

* Initial release. Seems stable enough (I use it every day), but
  warrants some shakedown before 1.0 release